third_party/move/move-compiler-v2/transactional-tests/tests/operator_eval/underscore.operator-eval-lang-1.exp
processed 13 tasks

task 0 'publish'. lines 1-77:
Error: compilation errors:
 error: undeclared `_`
   ┌─ TEMPFILE:32:9
   │
32 │         _  // undefined
   │         ^

error: duplicate declaration of `_`
   ┌─ TEMPFILE:34:30
   │
34 │     public fun test8(_: u64, _: u64): u64 {
   │                      -       ^
   │                      │        
   │                      previous declaration of `_`

error: duplicate declaration of `_`
   ┌─ TEMPFILE:38:37
   │
38 │     inline fun fun9(x: u64, _: u64, _: u64): u64 {
   │                             -       ^
   │                             │        
   │                             previous declaration of `_`

error: duplicate declaration of `_`
   ┌─ TEMPFILE:44:38
   │
44 │     inline fun fun10(x: u64, _: u64, _: |u64|u64): u64 {
   │                              -       ^
   │                              │        
   │                              previous declaration of `_`

error: cannot pass `integer` to a function which expects argument of type `|u64|u64`
   ┌─ TEMPFILE:48:21
   │
48 │         fun10(4, 3, 2)
   │                     ^



task 1 'run'. lines 79-79:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 2 'run'. lines 81-81:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 3 'run'. lines 83-83:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 4 'run'. lines 85-85:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 5 'run'. lines 87-87:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 6 'run'. lines 89-89:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 7 'run'. lines 91-91:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 8 'run'. lines 93-93:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 9 'run'. lines 95-95:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 10 'run'. lines 97-97:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 11 'run'. lines 99-99:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 12 'run'. lines 101-101:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
